html css complete js file select all id & class

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div class="calculator_grid">
         <div class="output" id="output">
-            <div class="previous_operant">111</div>
-            <div class="current_operant">22222</div>
+            <div class="previous_operant"></div>
+            <div class="current_operant"></div>
         </div>
         <button id="all-clear">AC</button>
         <button id="delete">DEL</button>
