--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button class="number">0</button>
         <button id="equals" class="span-two">=</button>
     </div>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
